@@ -10,7 +10,7 @@
 #
 # RCS: @(#) $Id$
 
-package require Tcl 8.5.0
+package require Tcl 8.4
 # Keep this in sync with pkgIndex.tcl and with the install directories
 # in Makefiles
 package provide http 2.7.1
